@@ -50,14 +50,14 @@ class QL_INTERCEPT(IntEnum):
 QL_DEBUGGER_ALL = (QL_DEBUGGER.IDAPRO, QL_DEBUGGER.GDB, QL_DEBUGGER.QDB)
 
 QL_ARCH_ENDIAN = (QL_ARCH.MIPS, QL_ARCH.ARM)
-QL_ARCH_1BIT   = (QL_ARCH.EVM)
+QL_ARCH_1BIT   = (QL_ARCH.EVM,)
 QL_ARCH_16BIT  = (QL_ARCH.A8086,)
 QL_ARCH_32BIT  = (QL_ARCH.ARM, QL_ARCH.ARM_THUMB, QL_ARCH.MIPS, QL_ARCH.X86)
 QL_ARCH_64BIT  = (QL_ARCH.ARM64, QL_ARCH.X8664)
-QL_ARCH_ALL    = QL_ARCH_16BIT + QL_ARCH_32BIT + QL_ARCH_64BIT
+QL_ARCH_ALL    = QL_ARCH_1BIT + QL_ARCH_16BIT + QL_ARCH_32BIT + QL_ARCH_64BIT
 
 QL_OS_NONPID        = (QL_OS.DOS, QL_OS.UEFI)
-QL_CUSTOM_ENGINE    = (QL_ARCH.EVM)
+QL_CUSTOM_ENGINE    = (QL_ARCH.EVM,)
 QL_OS_POSIX         = (QL_OS.LINUX, QL_OS.FREEBSD, QL_OS.MACOS)
 QL_OS_ALL           = QL_OS_POSIX + QL_OS_NONPID + (QL_OS.WINDOWS,)
 
@@ -92,6 +92,5 @@ os_map = {
 }
 
 arch_os_map = {
-        QL_ARCH.EVM: QL_OS.EVM,
-        QL_ARCH.WASM: QL_OS.WASM
+    QL_ARCH.EVM: QL_OS.EVM
 }
