@@ -3,7 +3,8 @@ This file details the changelog of Qiling Framework.
 ------------------------------------
 [Version 1.2.4]: April [SOMETHING], 2021
 
--
+- Added custom engine extension
+- 
 
 ------------------------------------
 [Version 1.2.3]: March 30th, 2021
